# RefPort

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
src/litsearch/: __init__.py  cli.py  config.py  exceptions.py  log_utils.py  normalization.py
src/litsearch/browser/: __init__.py  downloads.py  harness.py  parsers.py
src/litsearch/browser/selectors/: cnki.md  google_scholar.md  ieee.md  scopus.md  wos.md
src/litsearch/connectors/: __init__.py  base.py  crossref.py  http.py  ieee.py  openalex.py  registry.py  scopus.py  unpaywall.py  wos.py
src/litsearch/db/: schema.py  session.py
src/litsearch/models/: __init__.py  _mixins.py  author.py  browser.py  download.py  library.py  paper.py  search.py  source.py  venue.py
src/litsearch/services/: browser_service.py  dedupe.py  download_service.py  export_service.py  file_service.py  library_service.py  persistence.py  query_service.py  search_service.py
tests/fixtures/: crossref_search.json  ieee_search.json  openalex_search.json  scopus_search.json  unpaywall_lookup.json  wos_search.json
tests/unit/: test_browser_infrastructure.py  test_cli.py  test_config.py  test_crossref_connector.py  test_db.py  test_dedupe.py  test_download_service.py  test_export_service.py  test_file_service.py  test_http_client.py  test_ieee_connector.py  test_library_service.py  test_log_utils.py  test_models.py  test_normalization.py  test_openalex_connector.py  test_persistence.py  test_query_service.py  test_scopus_connector.py  test_search_service.py  test_unpaywall_connector.py  test_wos_connector.py
(+6 files in other folders)
